--- a/duna-web/www/index.html
+++ b/duna-web/www/index.html
@@ -4,21 +4,36 @@
     <meta charset="utf-8" />
     <title>Duna Emulator</title>
   </head>
-  <body style="display: flex; flex-direction: column;">
+  <body style="display: flex; flex-direction: column">
     <noscript>Duna requires Javascript and WebAssembly to run.</noscript>
     <script src="./bootstrap.js"></script>
     <!-- Putting the JS import first allows us to override 3rd-party styles after -->
-    <h2>Duna (very alpha)</h2>
+    <h2>Duna RV32 (very alpha)</h2>
     <style type="text/css">
+      html {
+        font-family: "Menlo", monospace, sans-serif;
+      }
       .CodeMirror {
         min-width: 60em;
         min-height: 30em;
         border: solid 0.1em;
       }
-      .lm_content {
+      .flexCol, .lm_content {
         /* Forces Golden panes to act as flexboxes when needed */
         display: flex;
         flex-direction: column;
+      }
+      .lm_content >:last-child {
+        flex: 1;
+      }
+      .flexRow {
+        display: flex;
+        flex-direction: row;
+      }
+      .flexRow * {
+        margin-left: 0.2em;
+        margin-right: 0.2em;
+        flex: 1;
       }
       /*
       This shenaniganry (as well as making <body></body> a flexbox) is to account for the fact that
