Add mips in dropdown

--- a/duna-web/www/index.html
+++ b/duna-web/www/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <title>Duna Emulator</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans"
+    />
   </head>
   <body style="display: flex; flex-direction: column">
     <noscript>Duna requires Javascript and WebAssembly to run.</noscript>
     <script src="./bootstrap.js"></script>
     <!-- Putting the JS import first allows us to override 3rd-party styles after -->
-    <h2>Duna RV32 (very alpha)</h2>
+    <h2>Duna Emulator (very alpha)</h2>
     <style type="text/css">
       html {
         font-family: "Menlo", monospace, sans-serif;
+      }
+      .plaintext {
+        font-family: "Nunito Sans", sans-serif;
       }
       .CodeMirror {
         min-width: 60em;
